--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
     <div class="projects">
       <div class="item">
         <a href="#!">
-          <img src="img/projects/kb.png" alt="Project">
+          <img src="img/projects/kb.PNG" alt="Project">
         </a>
         <a href="https://www.kblibook.com" class="btn-light">
           <i class="fas fa-eye"></i> Project
