--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <span class="text-secondary">Susanto</span>
     </h1>
     <h2 class="sm-heading">
-      Data Analyst, Business Intelligence, and Software Engineer
+      Application Developer
     </h2>
     <div class="icons">
       <a href="https://api.whatsapp.com/send/?phone=6282115105688&text&app_absent=0">
