--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       Hendro
       <span class="text-secondary">Susanto</span>
     </h1>
-    <h2 class="mm-heading">
+    <h2 class="sm-heading">
       Application Developer
     </h2>
     <div class="icons">
